--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="label_date">Data</string>
     <string name="label_hour">Hora</string>
     <string name="label_cancel">Cancelar</string>
+    <string name="label_task">Tarefas</string>
+    <string name="label_new_tasks">Nova tarefa</string>
+    <string name="label_edit">Editar</string>
+    <string name="label_del">Deletar</string>
+    <string name="label_you_dont_have_tasks">Você não tem\n nenhum lembrete</string>
 </resources>
